ref(login): Implemented authentication handlers

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Hello <div sec:authentication="name">world</div>!</h1>
+    <h1>Hello <span sec:authentication="name">world</span>!</h1>
 </body>
 
 </html>
