--- a/src/main/resources/templates/observatory/dashboard.html
+++ b/src/main/resources/templates/observatory/dashboard.html
@@ -119,43 +119,16 @@
     </main>
 
 
-
-
-
-    <script>
-        $(document).ready(function () {
-            var source = new EventSource("/altair/observatory/stream");
-            source.onmessage = function (event) {
-                var data = JSON.parse(event.data);
-                console.log(data);
-                $("#tsConnected").text(data.telescope.connected);
-                $("#tsSiderealTime").text(data.telescope.siderealTime);
-                $("#tsRightAscension").text(data.telescope.rightAscension);
-                $("#tsDeclination").text(data.telescope.declination);
-                $("#tsAzimuth").text(data.telescope.azimuth);
-                $("#tsAltitude").text(data.telescope.altitude);
-                $("#tsSlewing").text(data.telescope.slewing);
-                $("#tsTracking").text(data.telescope.tracking);
-                $("#tsAtHome").text(data.telescope.atHome);
-                $("#tsParked").text(data.telescope.parked);
-                $("#dmConnected").text(data.dome.connected);
-                $("#dmAzimuth").text(data.dome.azimuth);
-                $("#dmShutter").text(data.dome.shutter);
-                $("#dmSlaved").text(data.dome.slaved);
-                $("#dmSlewing").text(data.dome.slewing);
-                $("#dmAtHome").text(data.dome.atHome);
-                $("#dmParked").text(data.dome.parked);
-            };
-        });
-    </script>
     <form type="hidden" name="logoutForm" th:hidden="true" method="post" th:action="@{/logout}">
         <input type="submit" value="Logout" />
     </form>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="/js/dashboard.js"></script>
 </body>
 
 </html>
