--- a/src/main/resources/templates/observatory/dashboard.html
+++ b/src/main/resources/templates/observatory/dashboard.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link href="/css/dashboard.css" rel="stylesheet">
     <title>Dashboard</title>
 </head>
 
@@ -36,6 +35,9 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
+                        <a class="nav-link active" href="/altair/observatory/dashboard">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/altair/observatory/telescope">Telescope</a>
                     </li>
                     <li class="nav-item">
@@ -46,10 +48,10 @@
         </div>
     </nav>
     <main style="padding-left: 1.5rem; padding-right: 1.5rem">
-        <div class="row row-cols-1 row-cols-sm-2 g-3" style="min-width: 220px;">
-            <div class="col">
-                <div class="card h-100 text-bg-primary">
-                    <div class="card-header">Telescope</div>
+        <div class="row row-cols-1 row-cols-sm-2 g-3">
+            <div class="col mx-auto">
+                <div class="card h-100 text-bg-primary" style="max-width: 32rem; min-width: 15rem">
+                    <div class="card-header"><h5 class="card-title">Telescope</h5></div>
                     <div class="card-body text-bg-light">
                         <div class="row flex-nowrap">
                             <div class="col-auto">
@@ -58,8 +60,8 @@
                                     LST: <br>
                                     RA: <br>
                                     DEC: <br>
-                                    Azimuth: <br>
                                     Altitude: <br>
+                                    Azimuth: <br>
                                     Slewing: <br>
                                     Tracking: <br>
                                     At Home: <br>
@@ -72,8 +74,8 @@
                                     <span id="tsSiderealTime">???</span><br>
                                     <span id="tsRightAscension">???</span><br>
                                     <span id="tsDeclination">???</span><br>
-                                    <span id="tsAzimuth">???</span><br>
                                     <span id="tsAltitude">???</span><br>
+                                    <span id="tsAzimuth">???</span><br>
                                     <span id="tsSlewing">???</span><br>
                                     <span id="tsTracking">???</span><br>
                                     <span id="tsAtHome">???</span><br>
@@ -84,9 +86,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card h-100 text-bg-primary">
-                    <div class="card-header">Dome</div>
+            <div class="col mx-auto">
+                <div class="card h-100 text-bg-primary" style="max-width: 32rem; min-width: 15rem">
+                    <div class="card-header"><h5 class="card-title">Dome</h5></div>
                     <div class="card-body text-bg-light">
                         <div class="row flex-nowrap">
                             <div class="col-auto">
