ref(panel): code cleanup and reduction

--- a/src/main/resources/templates/observatory/dome.html
+++ b/src/main/resources/templates/observatory/dome.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
-    data-bs-theme="dark">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6" data-bs-theme="dark">
 
 <head>
     <meta charset="utf-8">
@@ -205,76 +204,6 @@
                             </div>  
                         </div>
                     </div>
-                    <!--
-                    <form class="card-body tab-content text-bg-light" id="tsSlewAbs">
-                        <div class="tab-pane active" id="raDec">
-                            <div class="d-flex flex-row justify-content-between">
-                                <div class="col-9">
-                                    <div class="row">
-                                        <div class="input-group mb-3">
-                                            <div class="d-flex">
-                                                <span class="input-group-text text-center">RA</span>
-                                                <input type="number" class="form-control flex-fill tsslewra" placeholder="--" min="0" max="23" id="tsSlewRAhours">
-                                                <span class="input-group-text">H</span>
-                                                <input type="number" class="form-control flex-fill tsslewra" placeholder="--" min="0" max="59" id="tsSlewRAmins">
-                                                <span class="input-group-text">M</span>
-                                                <input type="number" class="form-control flex-fill tsslewra" placeholder="--" min="0" max="59" id="tsSlewRAsecs">
-                                                <span class="input-group-text">S</span>
-                                            </div>
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <div class="d-flex">
-                                                <span class="input-group-text text-center">Dec</span>
-                                                <input type="text" class="form-control flex-fill tsslewdec" placeholder="---" id="tsSlewDECdegs">
-                                                <span class="input-group-text">°</span>
-                                                <input type="number" class="form-control flex-fill tsslewdec" placeholder="--" min="0" max="59" id="tsSlewDECmins">
-                                                <span class="input-group-text">&#39;</span>
-                                                <input type="number" class="form-control flex-fill tsslewdec" placeholder="--" min="0" max="59" id="tsSlewDECsecs">
-                                                <span class="input-group-text">&quot;</span>   
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-2 mb-3">
-                                    <button class="btn btn-primary w-100 h-100" type="submit" id="tsSlewRaDecBtn" disabled>Slew</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane" id="altAz">   
-                            <div class="d-flex flex-row justify-content-between">
-                                <div class="col-9">
-                                    <div class="row">
-                                        <div class="input-group mb-3">
-                                            <div class="d-flex">
-                                                <span class="input-group-text text-center">Alt</span>
-                                                <input type="number" class="form-control flex-fill tsslewalt" placeholder="---" min="0" max="90" id="tsSlewALTdegs">
-                                                <span class="input-group-text">H</span>
-                                                <input type="number" class="form-control flex-fill tsslewalt" placeholder="--" min="0" max="59" id="tsSlewALTmins">
-                                                <span class="input-group-text">M</span>
-                                                <input type="number" class="form-control flex-fill tsslewalt" placeholder="--" min="0" max="59" id="tsSlewALTsecs">
-                                                <span class="input-group-text">S</span>
-                                            </div>
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <div class="d-flex">
-                                                <span class="input-group-text text-center">Az</span>
-                                                <input type="number" class="form-control flex-fill tsslewaz" placeholder="---" min="0" max="360" id="tsSlewAZdegs">
-                                                <span class="input-group-text">°</span>
-                                                <input type="number" class="form-control flex-fill tsslewaz" placeholder="--" min="0" max="59" id="tsSlewAZmins">
-                                                <span class="input-group-text">&#39;</span>
-                                                <input type="number" class="form-control flex-fill tsslewaz" placeholder="--" min="0" max="59" id="tsSlewAZsecs">
-                                                <span class="input-group-text">&quot;</span>   
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-2 mb-3">
-                                    <button class="btn btn-primary w-100 h-100" type="submit" id="tsSlewAltAzBtn" disabled>Slew</button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                    -->
                 </div>
             </div>
         </div>      
