--- a/src/main/resources/templates/observatory/telescope.html
+++ b/src/main/resources/templates/observatory/telescope.html
@@ -46,6 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/altair/observatory/dome">Dome</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/altair/observatory/focuser">Focuser</a>
+                    </li>
                 </ul>
             </div>
         </div>
