--- a/src/main/resources/templates/observatory/telescope.html
+++ b/src/main/resources/templates/observatory/telescope.html
@@ -49,6 +49,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/altair/observatory/focuser">Focuser</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/altair/observatory/camera">Camera</a>
+                    </li>
                 </ul>
             </div>
         </div>
